--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -536,8 +536,8 @@ h1 {
 
 .glyphic-round {
     position: absolute;
-    top: 15px;
-    right: 45px;
+    top: 5px;
+    right: 5px;
     color: black;
 }
 
